<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundBeige"
    tools:context=".MainActivity2">


    <TextView
        android:id="@+id/personal"
        android:layout_width="263dp"
        android:layout_height="67dp"
        android:text="@string/personal_details"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024" />

    <Spinner
        android:id="@+id/occupation"
        android:layout_width="276dp"
        android:layout_height="51dp"
        android:entries="@array/occupation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.118"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.217" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutWorkingProfessional"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/occupation">

        <TextView
            android:id="@+id/textViewCompany"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/company_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextCompanyName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_company_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewCompany" />

        <TextView
            android:id="@+id/textViewJobTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/job_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextCompanyName" />

        <EditText
            android:id="@+id/editTextJobTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_job_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewJobTitle" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Fields for Student -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutStudent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/occupation">

        <TextView
            android:id="@+id/textViewCollegeName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/college_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextCollegeName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_college_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewCollegeName" />

        <TextView
            android:id="@+id/textViewCourse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/course"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextCollegeName" />

        <EditText
            android:id="@+id/editTextCourse"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_course"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewCourse" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/native_addr"
        android:layout_width="263dp"
        android:layout_height="46dp"
        android:ems="10"
        android:hint="Enter your native place"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.108"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.524" />


    <Button
        android:id="@+id/btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#1E34AF"
        android:text="Save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.995" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="211dp"
        android:layout_height="39dp"
        android:layout_marginBottom="288dp"
        android:text="select occupation"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/btn2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.292" />

    <RadioGroup
        android:layout_width="106dp"
        android:layout_height="113dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.762">

        <TextView
            android:id="@+id/text1"
            android:layout_width="93dp"
            android:layout_height="36dp"
            android:text="1.Smoking"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="93dp"
            android:layout_height="37dp"
            android:text="Yes" />

        <RadioButton
            android:id="@+id/radio2"
            android:layout_width="94dp"
            android:layout_height="37dp"
            android:text="No" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioGroup4"
        android:layout_width="106dp"
        android:layout_height="113dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.455"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.762">

        <TextView
            android:id="@+id/text2"
            android:layout_width="91dp"
            android:layout_height="36dp"
            android:text="2. Drinking"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radio3"
            android:layout_width="92dp"
            android:layout_height="37dp"
            android:text="Yes" />

        <RadioButton
            android:id="@+id/radio4"
            android:layout_width="92dp"
            android:layout_height="33dp"
            android:text="No" />
    </RadioGroup>

    <RadioGroup
        android:layout_width="112dp"
        android:layout_height="157dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.866"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.82">

        <TextView
            android:id="@+id/text3"
            android:layout_width="91dp"
            android:layout_height="36dp"
            android:text="3. Diet"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radio5"
            android:layout_width="92dp"
            android:layout_height="37dp"
            android:text="Veg" />

        <RadioButton
            android:id="@+id/radio6"
            android:layout_width="96dp"
            android:layout_height="33dp"
            android:text="Non-veg" />

        <RadioButton
            android:id="@+id/radio7"
            android:layout_width="94dp"
            android:layout_height="wrap_content"
            android:text="Vegan" />
    </RadioGroup>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="73dp"
        android:layout_height="107dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/mother_tongue"
        android:layout_width="260dp"
        android:layout_height="47dp"
        android:ems="10"
        android:hint="Enter your mother tongue"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.606" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="382dp"
        android:layout_height="32dp"
        android:cursorVisible="true"
        android:text="I agree that all the information I filled is correct."
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.908" />

    <TextView
        android:id="@+id/error"
        android:layout_width="170dp"
        android:layout_height="21dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.22"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.838" />

</androidx.constraintlayout.widget.ConstraintLayout>